# torno

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/torno/: core.py  store.py
tests/: conftest.py  test_core.py  test_store.py
