[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torno"
version = "0.1.0"
description = "A feature store for LLM-powered dataset enrichment"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["llm", "feature-store", "machine-learning", "data-enrichment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]
storage = [
    "redis>=5.0.0",
    "boto3>=1.28.0",
]
all = [
    "torno[test,dev,docs,storage]",
]

[project.scripts]
torno = "torno.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/torno"
Documentation = "https://yourusername.github.io/torno"
Repository = "https://github.com/yourusername/torno.git"
Issues = "https://github.com/yourusername/torno/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/torno"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=torno"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
